# kalshibook

./: .env.example  .gitignore  404.html  CLAUDE.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-phase-researcher.md  gsd-verifier.md
.claude/commands/: dev-login.md  publish-sdk.md  verify-dashboard.md
.claude/commands/gsd/: plan-phase.md
.claude/get-shit-done/workflows/: diagnose-issues.md  discuss-phase.md  execute-phase.md  execute-plan.md  new-milestone.md  new-project.md  plan-phase.md  progress.md  settings.md  transition.md  verify-phase.md  verify-work.md
.github/workflows/: docs.yml  publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phases/02-rest-api-authentication/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-billing-monetization/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md
.planning/phases/04-backtesting-ready-api/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-dashboard/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  (+10 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
authentication/: index.html
dashboard/: .env.local.example  middleware.ts  package-lock.json  package.json
examples/candles/: index.html
examples/dataframes/: index.html
examples/deltas/: index.html
examples/events/: index.html
examples/markets/: index.html
examples/orderbook/: index.html
examples/settlements/: index.html
examples/trades/: index.html
getting-started/: index.html
reference/SUMMARY/: index.html
reference/kalshibook/: index.html
scripts/: dev-login.sh
sdk/: LICENSE  README.md  mkdocs.yml  pyproject.toml
sdk/docs/: authentication.md  getting-started.md  index.md
sdk/docs/examples/: candles.md  dataframes.md  deltas.md  events.md  markets.md  orderbook.md  settlements.md  trades.md
sdk/scripts/: gen_ref_pages.py
sdk/src/kalshibook/: __init__.py  _http.py  _pagination.py  _parsing.py  client.py  exceptions.py  models.py
sdk/tests/: test_endpoints.py  test_import.py  test_pagination.py
search/: search_index.json
src/api/: deps.py  errors.py  main.py  models.py
src/collector/: archival.py  connection.py  discovery.py  enrichment.py  main.py  metrics.py  models.py  processor.py  writer.py
src/shared/: config.py  db.py
static/: llms-full.txt  llms.txt
supabase/: config.toml
supabase/migrations/: 20260213000001_create_markets.sql  20260213000002_create_snapshots.sql  20260213000003_create_deltas.sql  20260213000004_create_sequence_gaps.sql  20260213000005_create_subscription_overflow.sql  20260213000006_partition_management.sql  20260214000001_create_api_keys.sql  20260215000001_create_billing_accounts.sql  20260215000002_create_api_key_usage.sql  20260216000001_create_trades.sql  20260216000002_create_settlements.sql  20260216000003_create_events_series.sql  20260216000004_extend_markets.sql  20260216000005_update_partition_function.sql  20260217000001_add_key_type.sql  20260217000002_add_key_value.sql  20260218000001_create_coverage_matview.sql
tests/collector/: test_discovery.py  test_processor.py  test_writer.py
tests/shared/: test_config.py
(+134 files in other folders)
