[project]
name = "kalshibook"
version = "0.1.0"
description = "Python SDK for the KalshiBook L2 orderbook data API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "KalshiBook" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]

[project.urls]
Documentation = "https://kalshibook.github.io/kalshibook/"
Repository = "https://github.com/kalshibook/kalshibook"
Issues = "https://github.com/kalshibook/kalshibook/issues"
Changelog = "https://github.com/kalshibook/kalshibook/releases"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-httpx>=0.35",
    "mypy>=1.10",
    "ruff>=0.15",
]
docs = [
    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
